style.css
* {
    -webkit-box-sizing: border-box;
            box-sizing: border-box;
    line-height: 1.25em;
}

body {
    display: flex;
    height: 100vh;
    justify-content: center;
    align-items: center;
    background-color: #2e2e2e;
}

.calc-frame {
    width: 500px;
    height: 800px;
    /* background-color: #000000; */
}

.calc-holder, .calc-display {
    width: 100%;
    background-color: black;
    outline: none;
    color: white;
    font-weight: bold;
    text-align: end;
    cursor: default;
}

.calc-holder {
    height: 50px;
    border-radius: 35px 35px 0px 0px;
    font-size: 45px;
    padding-right: 15px;
}

.calc-display {
    height: 125px;
    font-size: 100px;
}

.calc-button {
    width: 125px;
    height: 125px;
    font-size: 50px;
    font-weight: bold;
    border: 2px solid black;
    outline: none;
}

#calc-clr, #calc-sqrt, #calc-opr {              /* operator colors */
    background-color: orange;
}

#calc-zero {
    width: 250px;
    border-radius: 0px 0px 0px 35px;
}

#calc-equ {
    border-radius: 0px 0px 35px 0px;
    background-color: #a33d01;
}

